apps/wireguard-vpn/network-policies/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: wireguard
spec:
  podSelector: {}  # all namespace pods are selected
  policyTypes:
    - Ingress
    - Egress
